2005-02-05  John Luke  <john.luke@gmail.com>

	* Gui/CodeGenerationPanel.cs: enable doc generation

2005-02-01  John Luke  <john.luke@gmail.com>

	* Parser/Parser.cs: use ErrorInfo

2005-01-28  John Luke  <john.luke@gmail.com>

	* Parser/Resolver.cs (IsAccessible):
	internal should return true
	fixes bug# 60526

2005-01-28  John Luke  <john.luke@gmail.com>

	* Parser/Resolver.cs: remove incorrect special case
	for properties that made them visible to completion
	incorrectly on static to instance and vice-versa
	fixes bug# 69741

2005-01-28  John Luke  <john.luke@gmail.com>

	* Parser/Parser.cs: update to CanParse
	* Parser/*.cs: update some minor fixes from SD

2005-01-27  John Luke  <john.luke@gmail.com>

	* CSharpBindingCompilerManager.cs:
	* Parser/CSharpVisitor.cs:
	* Parser/Resolver.cs:
	* FormattingStrategy/CSharpFormattingStrategy.cs: comment out
	some unused lines that produced warnings

2005-01-27  John Luke  <john.luke@gmail.com>

	* CSharp.glade: update to new glade format
	* Gui/CodeGenerationPanel.cs:
	* CSharp.glade: use ComboBox instead of OptionMenu

2005-01-26  John Luke  <john.luke@gmail.com>

	* templates/GtkSharpProject.xpt.xml
	* templates/GnomeSharpProgram.xft.xml
	* templates/GladeSharpProject.xpt.xml: clean up,
	consistent naming, spacing, tabbing

2005-01-24  Lluis Sanchez Gual  <lluis@novell.com>

	* CSharpLanguageBinding.cs: 
	* CSharpBindingCompilerManager.cs: Use the new progress monitor API.
	
2005-01-11  Lluis Sanchez Gual  <lluis@novell.com>

	* CSharpLanguageBinding.cs: 
	* Gui/ChooseRuntimePanel.cs:
	* Gui/CodeGenerationPanel.cs:
	* CSharpBindingCompilerManager.cs:
	* CSharpBinding.addin.xml:
	* Parser/Parser.cs:
	* Parser/Resolver.cs: Follow architecture changes.
	
	* Project/CSharpCompilerParameters.cs: Moved some parameters and enum
	definitions to DotNetProjectConfiguration.
	
	* CSharp.glade:
	* Gui/OutputOptionsPanel.cs: Removed dialog now implemented in Monodevelop.Base.

	* Project/CSharpProject.cs: